Revision history for Perl distribution PathTools.

3.27 - Wed Jan 16 20:20:49 2008

 - If strlcpy() and strlcat() aren't available on the user's system,
   we now use ppport.h to provide them, so our C code works. [Steve
   Peters]

 - Upgraded to a newer version of ppport.h [Steve Peters]

3.26 - Sun Jan 13 21:59:20 2008

 - case_tolerant() on Cygwin will now avoid a painful death when
   Cygwin::mount_flags() isn't defined, as is the case for perl <
   5.10.  It will now just return 1, which is what it always did
   before it got so smart. [Spotted by Emanuele Zeppieri]

 - abs_path() on Unix(ish) platforms has been upgraded to a much later
   version of the underlying C code from BSD. [Michael Schwern]

3.2501 - Mon Dec 24 20:33:02 2007

 - Reimplemented abs_path() on VMS to use
   VMS::Filespec::vms_realpath() when it's available. [John E. Malmberg]

 - tmpdir() on Cygwin now also looks in $ENV{TMP} and $ENV{TEMP}.

 - case_tolerant() on Cygwin and Win32 now take an optional path
   argument, defaulting to the C drive, to check for case tolerance,
   because this fact can vary on different volumes.

 - File::Spec on Unix now uses Cwd::getcwd() rather than Cwd::cwd() to
   get the current directory because I guess someone on p5p thought it
   was more appropriate.

 - Added a large set of File::Spec tests for the Cygwin platform.

 - abs_path() now behaves correctly with symbolic links on VMS.

 - Someone fixed a couple of mysterious edge cases in VMS' canonpath()
   and splitdir().

3.25_01 - Sat Oct 13 21:13:57 2007

 - Major fixes on Win32, including a rewrite of catdir(), catfile(),
   and canonpath() in terms of a single body of code. [Heinrich Tegethoff]

 - For Win32 and Cygwin, case-tolerance can vary depending on the
   volume under scrutiny.  When Win32API::File is available, it will
   be employed to determine case-sensitivity of the given filesystem
   (C: by default), otherwise we still return the default of 1. [Reini
   Urban]
